# tuitin-back

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  start.sh
posts/: urls.py
posts/models/: __init__.py  comentarios.py  post.py
posts/serializers/: __init__.py  comentarios_serializer.py  post_serializer.py
posts/viewsets/: __init__.py  comentarios_viewset.py  post_viewset.py
tuitin/: asgi.py  settings.py  urls.py  wsgi.py
userdata/: apps.py  signals.py  urls.py
userdata/models/: profile.py
userdata/serializers/: __init__.py  profile_serializer.py  public_user_serializer.py  register_serializer.py  user_serializer.py
userdata/viewsets/: __init__.py  follow.py  is_following.py  me_viewset.py  public_user_viewset.py  register_viewset.py
