[project]
name = "tuitin"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrique Sanfilippo",email = "henrique.sanfilippo@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.8"
dependencies = [
    "django (==4.2)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
