[project]
name = "tuitin"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrique Sanfilippo",email = "henrique.sanfilippo@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.9"
dependencies = [
    "django (==4.2)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pgcli (>=4.3.0,<5.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
